[package]
name = "strength_reduce"
version = "0.2.0"
authors = ["Elliott Mahler <join.together@gmail.com>"]

description = "Faster integer division and modulus operations"

license = "MIT OR Apache-2.0"

repository = "http://github.com/ejmahler/strength_reduce"
documentation = "http://docs.rs/strength_reduce"
keywords = ["arithmetic", "strength", "reduction", "division", "modulus"]
categories = ["algorithms", "data-structures"]
readme = "README.md"
